Implementing listener triggers to notify gui of process execution.